@@ -1,3 +1,8 @@
+2007-04-29  Robert Ancell  <robert.ancell@gmail.com>
+
+	* Set more configuration defaults in case schema is missing (Bug #434097)
+        * Use configured data dir for autosaves, not ~/.glchess
+
 2007-04-25  Robert Ancell  <robert.ancell@gmail.com>
 
 	* Update dummy OpenGL scene to have correct method arguments (Bug #420730)
